fixing logo and navbar spacing.

--- a/themes/independent-publisher-child-theme/style.css
+++ b/themes/independent-publisher-child-theme/style.css
@@ -52,8 +52,7 @@ and Blueprint http://www.blueprintcss.org/
 	/*social main */
 	#menu-social {display: none;}
 	#menu-social{float:right; clear: none;}
-	#menu-social ul{margin-top: 2px;}
-
+	#menu-social ul{margin-top: 2px;margin-bottom: 0px}
 
 	#page.site{
 		margin-top: 10px;
@@ -65,6 +64,7 @@ and Blueprint http://www.blueprintcss.org/
 	#masthead .site-logo{
 		float:left;
 		margin-right: 3px;
+		display: none;
 	}
 	#masthead .site-title, .single-column-layout #masthead .site-title{
 		padding-top:20px;
@@ -79,6 +79,10 @@ and Blueprint http://www.blueprintcss.org/
 		margin-top: 20px;
 		margin-bottom:60px;
 	}
+
+		#masthead .site-logo {
+			height: 55px;
+		}
 
 	@media only screen and (max-width: 400px){
 		#masthead .site-logo img, .single-column-layout #masthead .site-logo img {
@@ -96,18 +100,21 @@ and Blueprint http://www.blueprintcss.org/
 
 	@media only screen and (min-width: 320px){
 		#menu-social {display: block;}
-		/*
-		body #masthead .site-title, .single-column-layout #masthead .site-title{
-			font-size: 30px;
-		}
-		*/
 	}
 
 	@media only screen and (min-width: 400px){
 		body #masthead .site-title, .single-column-layout #masthead .site-title{
 			font-size: 30px;
+			padding-top: 10px;
 		}
-		#menu-social ul{margin-top: 14px;}
+		#masthead .site-logo {
+			height: 70px;
+			display: block;
+		}
+		#masthead .site-logo img{
+			max-width: 60px;
+		}
+		#menu-social ul{margin-top: 5px;}
 	}
 
 	@media only screen and (min-width: 500px){
